...
            android:layout_height="wrap_content"
            android:text="@string/clear_history" />

    </LinearLayout>

    <TextView
        android:id="@+id/history_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:padding="10dp"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbars="vertical"
...
